kakak login debug

--- a/svelte-app/public/index.html
+++ b/svelte-app/public/index.html
@@ -10,9 +10,12 @@
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
+	<!-- Load Kakao SDK script first -->
+	<script defer src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+
+	<!-- Load your Svelte application script afterwards -->
 	<script defer src='/build/bundle.js'></script>
 </head>
-
 <body>
 </body>
 </html>
