--- a/src/assets/html/detail.html
+++ b/src/assets/html/detail.html
@@ -10,10 +10,10 @@
   </head>
 
 <body>
-  <header class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-primary">
+  <header class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-success">
     <div class="ms-5 col-md-3">
-      <a href="main.html" class="text-decoration-none title text-primary">
-        <p class="fs-30" style="font-weight: 700;">&#129384;ReadingRocket&#127829;</p>
+      <a href="main.html" class="text-decoration-none title text-success">
+        <p class="fs-30" style="font-weight: 700;">&#128218;ReadingRocket&#128640;</p>
       </a>
     </div>
         <!-- Navbar added to the header -->
@@ -25,13 +25,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link text-primary" href="./community.html">Community</a>
+                <a class="nav-link text-success" href="./community.html">Community</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-primary" href="./products.html">Products</a>
+                <a class="nav-link text-success" href="./products.html">Products</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-primary" href="./cart.html">Cart</a>
+                <a class="nav-link text-success" href="./cart.html">Cart</a>
               </li>
             </ul>
           </div>
@@ -45,7 +45,7 @@
 
   <main>
     <div class="container my-5">
-      <h2 class="text-primary mb-4">물건 상세보기</h2>
+      <h2 class="text-success mb-4">물건 상세보기</h2>
       <div id="productDetail" class="row">
         <!-- Product details go here -->
       </div>
@@ -55,7 +55,7 @@
         <input type="number" id="quantity" name="quantity" value="1" min="1" max="10">
       </div>
 
-      <button type="button" class="btn btn-primary me-2" id="addToCartBtn">장바구니에 넣기</button>
+      <button type="button" class="btn btn-success me-2" id="addToCartBtn">장바구니에 넣기</button>
       <button type="button" class="btn btn-success" id="directPurchaseBtn">바로 주문</button>
 
       <div class="mt-4">
@@ -72,7 +72,7 @@
               <p>장바구니에 물건이 성공적으로 담겼습니다.</p>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-primary" onclick="window.location.href='cart.html'">장바구니로 이동</button>
+              <button type="button" class="btn btn-success" onclick="window.location.href='cart.html'">장바구니로 이동</button>
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="window.location.href='products.html'">닫기</button>
             </div>
           </div>
