--- a/src/assets/html/login.html
+++ b/src/assets/html/login.html
@@ -48,7 +48,7 @@
       class="jumbotron bg-sparta text-white text-center"
       onclick="window.location.href='./main.html'"
     >
-      <h1 class="font-weight-bold">&#129384; ReadingRocket &#127829;</h1>
+      <h1 class="font-weight-bold">📚ReadingRocket🚀</h1>
     </div>
     <div class="wrap">
       <div class="card mx-auto" style="max-width: 480px">
@@ -145,29 +145,7 @@
         </div>
       </div>
     </div>
-    <div
-      id="g_id_onload"
-      data-client_id="946284474369-q9eu0p37nm3e31ecilliolfuqvi8gmef.apps.googleusercontent.com"
-      data-login_uri="https://127.0.0.1:3000/assets/html/login.html"
-      data-auto_prompt="false"
-    ></div>
-    <div
-      class="g_id_signin"
-      data-type="standard"
-      data
-      size="large"
-      data-theme="outline"
-      data-text="sign_in_with"
-      data-shape="rectangular"
-      data-logo_alignment="left"
-    ></div>
-    <button id="recommendButton" onclick="getRandomFood()">
-      음식 추천 받기
-    </button>
-    <div id="foodDisplay">음식 추천이 나오는 곳</div>
-    <div id="imageContainer"></div>
 
-    <div id="footer-fixed"></div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script
@@ -187,6 +165,5 @@
     ></script>
     <script src="../js/auth.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
-
   </body>
 </html>
