Revert "Merge pull request #11 from joeunparkdev/feature/signup"
This reverts commit deaa21a3d988c243b9752ef6d6b4bc295290a231, reversing
changes made to d1e57b14a35f5f5fa8cb262cc401b0929871e3cc.

--- a/src/assets/html/modifyProfile.html
+++ b/src/assets/html/modifyProfile.html
@@ -45,7 +45,7 @@
       class="jumbotron bg-sparta text-white text-center"
       onclick="window.location.href='./main.html'"
     >
-      <h1 class="font-weight-bold">📚ReadingRocket🚀</h1>
+      <h1 class="font-weight-bold">&#129384; ReadingRocket &#127829;</h1>
     </div>
     <div class="wrap">
       <div class="card mx-auto" style="max-width: 480px">
