--- a/src/assets/html/myPage.html
+++ b/src/assets/html/myPage.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-    <header class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-success">
+    <header class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-primary">
         <div class="ms-5 col-md-3">
-            <a href="main.html" class="text-decoration-none title text-success">
-                <p class="fs-30" style="font-weight: 700;">&#128218;ReadingRocket&#128640;</p>
+            <a href="main.html" class="text-decoration-none title text-primary">
+                <p class="fs-30" style="font-weight: 700;">&#129384;ReadingRocket&#127829;</p>
               </a>
         </div>
             <!-- Navbar added to the header -->
@@ -26,13 +26,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-success" href="./community.html">Community</a>
+              <a class="nav-link text-primary" href="./community.html">Community</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-success" href="./products.html">Products</a>
+              <a class="nav-link text-primary" href="./products.html">Products</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-success" href="./cart.html">Cart</a>
+              <a class="nav-link text-primary" href="./cart.html">Cart</a>
             </li>
           </ul>
         </div>
@@ -47,15 +47,15 @@
     <main>
         <!-- 마이페이지 섹션 -->
         <div id="myPageSection" class="container my-5">
-            <h2 class="text-success mb-4">마이페이지</h2>
+            <h2 class="text-primary mb-4">마이페이지</h2>
             
             <!-- 사용자 세부 정보 -->
             <div>
-              <h3 class="text-success">사용자 세부 정보</h3>
+              <h3 class="text-primary">사용자 세부 정보</h3>
                 <p id="userName"><strong>이름:</strong> </p>
                 <p id="userEmail"><strong>Email:</strong> </p>
                 <!-- 기타 사용자 정보를 여기에 추가하세요 -->
-                <button class="btn btn-success" onclick="window.location.href='modifyProfile.html'">수정하기</button>
+                <button class="btn btn-primary" onclick="window.location.href='modifyProfile.html'">수정하기</button>
             </div>
     </main>
 
