--- a/src/assets/html/cart.html
+++ b/src/assets/html/cart.html
@@ -16,12 +16,12 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
   <header
-    class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-success"
+    class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-primary"
   >
     <div class="ms-5 col-md-3">
-      <a href="main.html" class="text-decoration-none title text-success">
+      <a href="main.html" class="text-decoration-none title text-primary">
         <p class="fs-30" style="font-weight: 700">
-          &#128218;ReadingRocket&#128640;
+          &#129384;ReadingRocket&#127829;
         </p>
       </a>
     </div>
@@ -41,15 +41,15 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-success" href="./community.html"
+            <a class="nav-link text-primary" href="./community.html"
               >Community</a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="./products.html">Products</a>
+            <a class="nav-link text-primary" href="./products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="./cart.html">Cart</a>
+            <a class="nav-link text-primary" href="./cart.html">Cart</a>
           </li>
         </ul>
       </div>
