--- a/src/assets/html/main.html
+++ b/src/assets/html/main.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-  <header class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-success">
+  <header class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-primary">
     <div class="ms-5 col-md-3">
-      <a href="main.html" class="text-decoration-none title text-success">
-        <p class="fs-30" style="font-weight: 700;">&#128218;ReadingRocket&#128640;</p>
+      <a href="main.html" class="text-decoration-none title text-primary">
+        <p class="fs-30" style="font-weight: 700;">&#129384;ReadingRocket&#127829;</p>
       </a>
     </div>
     <!-- Navbar added to the header -->
@@ -25,13 +25,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link text-success" href="./community.html">Community</a>
+            <a class="nav-link text-primary" href="./community.html">Community</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="./products.html">Products</a>
+            <a class="nav-link text-primary" href="./products.html">Products</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="./cart.html">Cart</a>
+            <a class="nav-link text-primary" href="./cart.html">Cart</a>
           </li>
         </ul>
       </div>
@@ -44,8 +44,8 @@
   </header>
   <main>
     <div class="container my-5">
-      <h2 class="text-success mb-4">
-        <a href="products.html" class="text-decoration-none text-success"
+      <h2 class="text-primary mb-4">
+        <a href="products.html" class="text-decoration-none text-primary"
           onclick="window.location.href='product.html'">Featured Products</a>
       </h2>
       <!-- 상품 목록 Carousel -->
@@ -80,8 +80,8 @@
     </div>
 
     <div class="container my-5">
-      <h2 class="text-success mb-4">
-        <a href="community.html" class="text-decoration-none text-success"
+      <h2 class="text-primary mb-4">
+        <a href="community.html" class="text-decoration-none text-primary"
           onclick="window.location.href='posts.html'">Popular Posts</a>
       </h2>
       <div class="row row-cols-1 row-cols-md-3 g-4" id="reviewCardsContainer">
