--- a/src/assets/html/modifyReview.html
+++ b/src/assets/html/modifyReview.html
@@ -14,12 +14,12 @@
 
   <body>
     <header
-      class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-success"
+      class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-primary"
     >
       <div class="ms-5 col-md-3">
-        <a href="main.html" class="text-decoration-none title text-success">
+        <a href="main.html" class="text-decoration-none title text-primary">
           <p class="fs-30" style="font-weight: 700">
-            &#128218;ReadingRocket&#128640;
+            &#129384;ReadingRocket&#127829;
           </p>
         </a>
       </div>
@@ -39,17 +39,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-success" href="./community.html"
+              <a class="nav-link text-primary" href="./community.html"
                 >Community</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-success" href="./products.html"
+              <a class="nav-link text-primary" href="./products.html"
                 >Products</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link text-success" href="./cart.html">Cart</a>
+              <a class="nav-link text-primary" href="./cart.html">Cart</a>
             </li>
           </ul>
         </div>
@@ -59,12 +59,12 @@
           <div class="d-flex justify-content-between">
             <button
               type="button"
-              class="btn btn-outline-success ms-2"
+              class="btn btn-outline-primary ms-2"
               onclick="logout()"
             >
               Logout
             </button>
-            <a href="myPage.html" type="button" class="btn btn-success ms-2"
+            <a href="myPage.html" type="button" class="btn btn-primary ms-2"
               >MyPage</a
             >
           </div>
@@ -73,7 +73,7 @@
     </header>
 
     <main class="container my-5">
-      <h2 class="text-success mb-4">편의점 리뷰 수정</h2>
+      <h2 class="text-primary mb-4">편의점 리뷰 수정</h2>
       <form id="reviewForm">
         <div class="mb-3">
           <label for="convenienceStore" class="form-label">편의점 선택:</label>
@@ -113,7 +113,7 @@
           ></textarea>
         </div>
 
-        <button type="button" class="btn btn-success" onclick="editReview()">
+        <button type="button" class="btn btn-primary" onclick="editReview()">
           리뷰 수정
         </button>
       </form>
