--- a/src/assets/html/products.html
+++ b/src/assets/html/products.html
@@ -67,8 +67,27 @@
         <div
           class="row row-cols-1 row-cols-md-3 g-4"
           id="productCardsContainer"
-        >
-          <!-- Product Cards go here -->
+        ></div>
+      </div>
+      <!-- Center-aligned Search bar -->
+      <div
+        class="col-md-6 d-flex justify-content-center align-items-center mx-auto"
+      >
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="검색어를 입력하세요"
+            aria-label="검색어 입력"
+            aria-describedby="searchButton"
+          />
+          <button
+            class="btn btn-outline-success"
+            type="button"
+            id="searchButton"
+          >
+            검색
+          </button>
         </div>
       </div>
     </main>
