--- a/src/assets/html/register.html
+++ b/src/assets/html/register.html
@@ -143,7 +143,7 @@
             </div>
           </div>
 
-          <div class="form-group row">
+          <div id="userTypeFormGroup" class="form-group row">
             <label class="col-sm-4 col-form-label">유저타입</label>
             <div class="col-sm-8">
               <div class="form-check form-check-inline">
