--- a/src/assets/html/main.html
+++ b/src/assets/html/main.html
@@ -1,100 +1,105 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>ReadingRocket 상품 페이지</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ReadingRocket</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-</head>
-
-<body>
-  <header class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-success">
-    <div class="ms-5 col-md-3">
-      <a href="main.html" class="text-decoration-none title text-success">
-        <p class="fs-30" style="font-weight: 700;">&#128218;ReadingRocket&#128640;</p>
-      </a>
-    </div>
-    <!-- Navbar added to the header -->
-    <nav class="navbar navbar-expand-md navbar-light">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link text-success" href="./community.html">Community</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-success" href="./products.html">Products</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link text-success" href="./cart.html">Cart</a>
-          </li>
-        </ul>
+  <body>
+    <header
+      class="p-1 d-flex flex-wrap align-items-center justify-content-md-between border-bottom border-success"
+    >
+      <div class="ms-5 col-md-3">
+        <a href="main.html" class="text-decoration-none title text-success">
+          <p class="fs-30" style="font-weight: 700">
+            &#128218;ReadingRocket&#128640;
+          </p>
+        </a>
       </div>
-    </nav>
-    <div class="col-md-3 text-end">
-      <div class="me-5 col-md-3 text-end" id="loginContainer">
-        <!-- 로그인 또는 로그아웃 버튼이 여기에 동적으로 추가. -->
-      </div>
-    </div>
-  </header>
-  <main>
-    <div class="container my-5">
-      <h2 class="text-success mb-4">
-        <a href="products.html" class="text-decoration-none text-success"
-          onclick="window.location.href='product.html'">Featured Products</a>
-      </h2>
-      <!-- 상품 목록 Carousel -->
-      <div id="productCarousel" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner" id="productCards">
-          <!-- Product Cards go here -->
-          <div class="row row-cols-1 row-cols-md-3 g-4">
-            <!-- Product Card 1 -->
-            <div class="col">
-              <div class="card h-100">
-                <!-- ... 상품 카드 내용 ... -->
-              </div>
-            </div>
-            <!-- Product Card 2 -->
-            <div class="col">
-              <div class="card h-100">
-                <!-- ... 상품 카드 내용 ... -->
-              </div>
-            </div>
-            <!-- 추가 상품 카드들... -->
-          </div>
+      <!-- Navbar added to the header -->
+      <nav class="navbar navbar-expand-md navbar-light">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link text-success" href="./community.html"
+                >Community</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-success" href="./products.html"
+                >Products</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-success" href="./cart.html">Cart</a>
+            </li>
+          </ul>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#productCarousel" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">이전</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#productCarousel" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">다음</span>
-        </button>
+      </nav>
+      <div class="col-md-3 text-end">
+        <div class="me-5 col-md-3 text-end" id="loginContainer">
+          <!-- 로그인 또는 로그아웃 버튼이 여기에 동적으로 추가. -->
+        </div>
       </div>
-    </div>
+    </header>
 
-    <div class="container my-5">
-      <h2 class="text-success mb-4">
-        <a href="community.html" class="text-decoration-none text-success"
-          onclick="window.location.href='posts.html'">Popular Posts</a>
-      </h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4" id="reviewCardsContainer">
-        <!-- Review Cards go here -->
+    <main>
+      <div class="container my-5">
+        <h2 class="text-success mb-4">전체 상품</h2>
+        <div
+          class="row row-cols-1 row-cols-md-3 g-4"
+          id="productCardsContainer"
+        ></div>
       </div>
-  </main>
+      <!-- Center-aligned Search bar -->
+      <div
+        class="col-md-6 d-flex justify-content-center align-items-center mx-auto"
+      >
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="검색어를 입력하세요"
+            aria-label="검색어 입력"
+            aria-describedby="searchButton"
+          />
+          <button
+            class="btn btn-outline-success"
+            type="button"
+            id="searchButton"
+          >
+            검색
+          </button>
+        </div>
+      </div>
+    </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="/assets/js/main.js"></script>
-  <script src="/assets/js/header.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/assets/js/products.js"></script>
+  </body>
 
-</body>
-
+  <script src="../js/header.js"></script>
 </html>
