--- a/src/assets/html/login.html
+++ b/src/assets/html/login.html
@@ -163,7 +163,7 @@
       integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/auth.js"></script>
+    <script src="../js/login.js"></script>
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   </body>
 </html>
