--- a/src/assets/html/products.html
+++ b/src/assets/html/products.html
@@ -62,33 +62,35 @@
     </header>
 
     <main>
-      <div class="container my-5">
+      <div class="container my-5 text-center">
         <h2 class="text-success mb-4">전체 상품</h2>
+        <!-- Center-aligned Search bar -->
+        <div
+          class="col-md-6 d-flex justify-content-center align-items-center mx-auto"
+        >
+          <div class="input-group">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="검색어를 입력하세요"
+              aria-label="검색어 입력"
+              aria-describedby="searchButton"
+            />
+            <button
+              class="btn btn-outline-success"
+              type="button"
+              id="searchButton"
+            >
+              검색
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
         <div
           class="row row-cols-1 row-cols-md-3 g-4"
           id="productCardsContainer"
         ></div>
-      </div>
-      <!-- Center-aligned Search bar -->
-      <div
-        class="col-md-6 d-flex justify-content-center align-items-center mx-auto"
-      >
-        <div class="input-group">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="검색어를 입력하세요"
-            aria-label="검색어 입력"
-            aria-describedby="searchButton"
-          />
-          <button
-            class="btn btn-outline-success"
-            type="button"
-            id="searchButton"
-          >
-            검색
-          </button>
-        </div>
       </div>
     </main>
 
@@ -98,7 +100,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/assets/js/products.js"></script>
+    <script src="../js/products.js"></script>
   </body>
 
   <script src="../js/header.js"></script>
