--- a/src/assets/html/main.html
+++ b/src/assets/html/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>ReadingRocket 상품 페이지</title>
+    <title>ReadingRocket 서점 페이지</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -62,33 +62,35 @@
     </header>
 
     <main>
-      <div class="container my-5">
-        <h2 class="text-success mb-4">전체 상품</h2>
+      <div class="container my-5 text-center">
+        <h2 class="text-success mb-4">전체 서점</h2>
+        <!-- Center-aligned Search bar -->
+        <div
+          class="col-md-6 d-flex justify-content-center align-items-center mx-auto"
+        >
+          <div class="input-group">
+            <input
+              type="text"
+              class="form-control"
+              placeholder="검색어를 입력하세요"
+              aria-label="검색어 입력"
+              aria-describedby="searchButton"
+            />
+            <button
+              class="btn btn-outline-success"
+              type="button"
+              id="searchButton"
+            >
+              검색
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="container">
         <div
           class="row row-cols-1 row-cols-md-3 g-4"
           id="productCardsContainer"
         ></div>
-      </div>
-      <!-- Center-aligned Search bar -->
-      <div
-        class="col-md-6 d-flex justify-content-center align-items-center mx-auto"
-      >
-        <div class="input-group">
-          <input
-            type="text"
-            class="form-control"
-            placeholder="검색어를 입력하세요"
-            aria-label="검색어 입력"
-            aria-describedby="searchButton"
-          />
-          <button
-            class="btn btn-outline-success"
-            type="button"
-            id="searchButton"
-          >
-            검색
-          </button>
-        </div>
       </div>
     </main>
 
@@ -98,7 +100,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <script src="/assets/js/products.js"></script>
+    <script src="../js/main.js"></script>
   </body>
 
   <script src="../js/header.js"></script>
