--- a/src/assets/html/products.html
+++ b/src/assets/html/products.html
@@ -10,6 +10,12 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <style>
+      #searchResultsContainer,
+      #productCardsContainer {
+        display: none;
+      }
+    </style>
   </head>
 
   <body>
@@ -86,7 +92,19 @@
           </div>
         </div>
       </div>
+
+      <!-- Search Results Section -->
+      <div class="container my-5 text-center">
+        <h2 class="text-success mb-4" id="searchResultsTitle">검색 결과</h2>
+        <div
+          class="row row-cols-1 row-cols-md-3 g-4"
+          id="searchResultsContainer"
+        ></div>
+      </div>
+
+      <!-- All Products Section -->
       <div class="container">
+        <h2 class="text-success mb-4">전체 상품 목록</h2>
         <div
           class="row row-cols-1 row-cols-md-3 g-4"
           id="productCardsContainer"
